--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^0.6.1",
+    "@ethereum-attestation-service/eas-sdk": "^1.5.0",
     "@farcaster/hub-nodejs": "^0.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
+    "ethers": "^6.11.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
     "satori": "^0.10.13",
