--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@coinbase/onchainkit": "^0.6.1",
     "@ethereum-attestation-service/eas-sdk": "^1.5.0",
     "@farcaster/hub-nodejs": "^0.11.0",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "ethers": "^6.11.1",
