--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p .",
     "dev": "tsc -p . && nodemon src/server.ts",
-    "start": "tsc -p . && ts-node src/server.ts"
+    "start": "node build/server.js"
   },
   "keywords": [],
   "author": "",
