--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p .",
+    "build": "tsc -p . && node build/server.js",
     "dev": "tsc -p . && nodemon src/server.ts",
-    "start": "node server.js"
+    "start": "node build/server.js"
   },
   "keywords": [],
   "author": "",
