--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p . && node build/server.js",
+    "build": "tsc -p .",
     "dev": "tsc -p . && nodemon src/server.ts",
     "start": "node build/server.js"
   },
